# mengine

./: .clang-format  .editorconfig  Makefile  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: android_mengine.cpp  android_mengine.h  main.cpp  mengine.cpp  mengine.h  mengine_opengl.cpp  mengine_opengl.h  mengine_platform.h  mengine_render.cpp  mengine_render.h  mengine_shared.h  sdl_mengine.cpp  sdl_mengine.h
gradle/wrapper/: gradle-wrapper.properties
